refactor: Simplify AppointmentResponse and UserResponse classes with Lombok annotations; clean up imports and remove redundant code